--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 
 body{
     background-color:#f6f8f9;
+    font-family: sans-serif;
+
 }
 
 .header-container{
@@ -53,6 +55,8 @@ header{
         border-radius: 5px;
         border-style: solid;
         border-width: 1px;
+        padding: 7px 7px;
+        margin-bottom: 10px;
     }
 
     .btn-blu{
@@ -64,4 +68,10 @@ header{
     .btn-white{
         background-color: white;
         color: #d9dde1;
+    }
+
+    hr{
+        border-style: solid;
+        color: #f6f8f9;
+        background-color: #f6f8f9;
     }
