--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,43 @@ header{
         color: #f6f8f9;
         background-color: #f6f8f9;
     }
+
+   .main-container ul{
+       margin-left: 20px;
+       list-style-type: none;
+   }
+
+   .menu{
+       font-weight: 800;
+       margin-bottom: 20px;
+   }
+
+   .menu ul{
+       font-weight: 100;
+   }
+
+   .menu span{
+       color: green;
+       border-color: green;
+       border-style: solid;
+       border-width: 2px;
+       display: inline-block;
+       width: 20px;
+       height: 20px;
+       border-radius: 50%;
+       text-align: center;
+       line-height: 20px;
+    }
+
+    .menu div{
+        color: red;
+       border-color: red;
+       border-style: solid;
+       border-width: 2px;
+       display: inline-block;
+       width: 20px;
+       height: 20px;
+       border-radius: 50%;
+       text-align: center;
+       line-height: 20px;
+    }
