--- a/css/style.css
+++ b/css/style.css
@@ -90,9 +90,13 @@ header{
        font-weight: 100;
    }
 
-   .menu span{
-       color: green;
-       border-color: green;
+   .menu li{
+       padding: 10px;
+   }
+
+   .green{
+       color: #94d5c7;
+       border-color: #94d5c7;
        border-style: solid;
        border-width: 2px;
        display: inline-block;
@@ -103,7 +107,7 @@ header{
        line-height: 20px;
     }
 
-    .menu div{
+    .red{
         color: red;
        border-color: red;
        border-style: solid;
@@ -115,3 +119,16 @@ header{
        text-align: center;
        line-height: 20px;
     }
+
+    .categories{
+        color: white;
+        background-color: #57adea;
+        display: inline-block;
+        border-radius: 10px;
+        width: 80px;
+        height:25px;
+        font-size: 12px;
+        text-align: center;
+        padding-top: 5px;
+    }
+
