--- a/css/style.css
+++ b/css/style.css
@@ -132,3 +132,15 @@ header{
         padding-top: 5px;
     }
 
+    .cat-violet{
+        background-color: #9c72e4;
+    }
+    .cat-orange{
+        background-color: #ee9e32;
+    }
+    .cat-pink{
+        background-color: #d863a1;
+    }
+    .cat-green{
+        background-color: #b0c925;
+    }
